# tech-test

./: Cargo.toml  README.md  launch.sh
scripts/: get_data.py
src/: main.rs
src/common/: mod.rs  spot_entry.rs  transaction.rs
src/events/: listener.rs  mod.rs  transaction.rs
src/metrics/: mod.rs  storage.rs  twap.rs
src/server/: app.rs  event_listener.rs  mod.rs  restapi.rs  signing.rs  twap.rs
