# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
authors = ["Paul Razvan Berg"]
description = "A template for developing Rust projects, with sensible defaults"
edition = "2021"
homepage = "https://github.com/PaulRBerg/rust-template"
license = "MIT"
name = "gobin-tech-interview"
version = "0.1.0"

[dependencies]
starknet = "0.12.0"
futures-util = "0.3"
alloy = { version = "0.8", features = ["full"] }
eyre = "0.6.12"
bytes = "1"
mini-redis = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
clap = { version = "4.5.23", features = ["derive"] }
axum = { version = "0.7.9", features = ["macros", "multipart", "tokio"] }
axum-macros = "0.3"
reqwest = { version = "0.11", features = ["blocking"] }

[dev-dependencies]
rstest = "0.23.0"
